--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password, James"
+            placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password, James</button>
+          <button id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
